customer-app/deploy/mysql-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
  namespace: customer-app
  labels:
    app: mysql
    app.kubernetes.io/component: mysql
    app.kubernetes.io/instance: mysql
    backstage.io/kubernetes-id: customer-app
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 3306-tcp
      protocol: TCP
      port: 3306
      targetPort: 3306
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    backstage.io/kubernetes-id: customer-app
    deployment: mysql
status:
  loadBalancer: {}
